install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/run_test.sh DESTINATION ${TESTS_PATH})
install(DIRECTORY . DESTINATION ${TESTS_PATH} FILES_MATCHING PATTERN "*.c")
install(DIRECTORY . DESTINATION ${TESTS_PATH} FILES_MATCHING PATTERN "*.exp")
install(PROGRAMS ${EXECUTABLE_OUTPUT_PATH}/main DESTINATION ${TESTS_PATH})
install(PROGRAMS ${EXECUTABLE_OUTPUT_PATH}/main DESTINATION ${TESTS_PATH}/resultat)

add_test(NAME constante_int COMMAND ${TESTS_PATH}/run_test.sh constante_int ${TESTS_PATH})
add_test(NAME constante_float COMMAND ${TESTS_PATH}/run_test.sh constante_float ${TESTS_PATH})
add_test(NAME conversion_type_implicite COMMAND ${TESTS_PATH}/run_test.sh conversion_type_implicite ${TESTS_PATH})
add_test(NAME declaration_variable COMMAND ${TESTS_PATH}/run_test.sh declaration_variable ${TESTS_PATH})
add_test(NAME load_store COMMAND ${TESTS_PATH}/run_test.sh load_store ${TESTS_PATH})
add_test(NAME condition COMMAND ${TESTS_PATH}/run_test.sh condition ${TESTS_PATH})
add_test(NAME boucle COMMAND ${TESTS_PATH}/run_test.sh boucle ${TESTS_PATH})
add_test(NAME declaration_fonction COMMAND ${TESTS_PATH}/run_test.sh declaration_fonction ${TESTS_PATH})
add_test(NAME appel_fonction COMMAND ${TESTS_PATH}/run_test.sh appel_fonction ${TESTS_PATH})
add_test(NAME label COMMAND ${TESTS_PATH}/run_test.sh label ${TESTS_PATH})
add_test(NAME eval_paresseuse_and COMMAND ${TESTS_PATH}/run_test.sh eval_paresseuse_and ${TESTS_PATH})
add_test(NAME eval_paresseuse_or COMMAND ${TESTS_PATH}/run_test.sh eval_paresseuse_or ${TESTS_PATH})
add_test(NAME pointeur COMMAND ${TESTS_PATH}/run_test.sh pointeur ${TESTS_PATH})

add_subdirectory(resultat)
